kubernetes/apps/base/selfhosted/dotbot/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dotbot
spec:
  hostnames: ["dotbot.${DOMAIN}"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: dotbot
          namespace: selfhosted
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /interactions
